task2/my-note-webapp-master/webserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "80"
  name: php-svc
  namespace: nirmal
  labels:
    app.kubernetes.io/app: php-app
spec:
  selector:
    app.kubernetes.io/app: php-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: nirmal
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "3306"
spec:
  selector:
    app.kubernetes.io/app: mysql-app
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
    name: mysqlhttp
---
# phpmyadmin service
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-svc
  namespace: nirmal
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "80"
spec:
  selector:
    app.kubernetes.io/app: phpmyadmin-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: phpmyadminhttp
