task2/my-note-webapp-master/php-mysql-ingress.yaml
# this is ingress resource file used to hit the trefik-web-ui service when traefik-ui.kubeadm will hit
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: php-ingress
  namespace: nirmal
spec:
  rules:
  - host: notes.xenon.team
    http:
      paths:
      - path: /
        backend:
          serviceName: php-svc
          servicePort: 80
  - host: notes.xenon.team.phpmyadmin
    http:
      paths:
      - path: /
        backend:
          serviceName: phpmyadmin-svc
          servicePort: 80
